___________________________

Engine changes
--------------

* Fix registering quest to the launcher at quest install time (#948).
* Fix crash when a scrolling teletransporter is incorrectly placed (#977).
* Fix memory leak when creating lots of surfaces (#962).
* Fix cleanup of the quest files at exit.
* Fix error in sol.main.load_settings() when the file does not exist.
* Improve error messages of surface creations and conversions.

Sample quest changes
--------------------

* Add enemies, NPCs, musics and sounds (thanks Diarandor!).
* Add a clickable HUD (thanks Vlag!).
* Put the solarus logo script in scripts/menus/.
* Fix wrong hero sprite after game-over (#952).

__________________________

Solarus 1.5.0 (2016-07-27)
__________________________

Engine changes
--------------

* Add a launcher GUI to ease chosing a quest and setting options (#693).
* Rename the solarus_run executable to solarus-run.
* Add version number and symbolic links when building the library.
* Add a -lua-console option to run Lua code from the standard input.
* Remove the -win-console option, the preferred way is now to use a GUI.
* Add a -turbo option to run at full speed.
* Add a -lag option to simulate slower systems for debugging.
* Print when the main loop starts and stops.
* Print the Lua version at startup (#692).
* Outputs are now prefixed by [Solarus] and the current simulated time.
* Musics: Add support of custom OGG looping (#643).
* Maps: allow more than 3 layers (#445).
* Improve the performance of loading big maps (#854).
* Improve the performance of custom entity collisions.
* Improve the performance of collisions by using a quadtree.
* Entities far from the camera are no longer suspended.
* The hero no longer automatically jumps when arriving on water (#530).
* Destinations can now set to update or not the starting location (#819).
* Teletransporters on the side of the map now work on all layers (#850).
* Streams can now have a speed of zero (#496).