@@ -60,6 +60,7 @@ set(lua_test_maps
   "bugs/940_crash_bomb_on_stream"
   "bugs/945_flying_enemies_fall_in_hole"
   "bugs/946_reused_movement_callback"
+  "bugs/954_entity_name_nil_after_removed"
 )
 
 # Build the Solarus testing library.
